<resources>
    <string name="app_name">My Fitness App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_register">Register</string>
    <string name="title_activity_media_list">MediaList</string>
    <string name="title_activity_today_calorie_count">TodayCalorieCount</string>
    <string name="ChooseLS">Choose Lifestyle</string>


    <string-array name="lifestyle">
        <item>Passive</item>
        <item>Light</item>
        <item>Moderate</item>
        <item>Heavy</item>
        <item>Very Heavy</item>
    </string-array>
</resources>
